k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alt-deck
  namespace: alt-deck
spec:
  selector:
    app: alt-deck
  ports:
    - port: 80
      targetPort: 3000
